Big progress on ai, done spending all resources randomly